[package]
name = "autobahn-client"
version = "0.2.0"
authors = [ "Patrick Winters <19wintersp@gmail.com>" ]
edition = "2018"
description = "The client part of Autobahn"
readme = "../readme.md"
license = "GPL-3.0-or-later"

[dependencies]
minicbor = { version = "0.11.3", features = [ "std" ] }
websocket = "0.26.2"
log = "0.4.14"
simple_logger = "1.13.0"
num_enum = "0.5.4"
clap = "2.33.3"
vt100 = "0.12.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [ "impl-default" ] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.103"
lazy_static = "1.4.0"
